<resources>
    <string name="app_name">Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="save_hillfort"> Save Hillfort </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_hillfort_image">Edit hillfort image</string>
    <string name="change_hillfort_image">Change hillfort image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="checkbox_visited">Visited</string>
    <string name="label_imageNo">1</string>
    <string name="label_imageHint">Select slot to add image</string>
    <string name="login_username">Enter Email</string>
    <string name="login_password">Enter Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_update">Update User Credentials</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_up">Up</string>
    <string name="title_activity_hillfort_maps">Map of All Hillforts</string>
    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="menu_saveHillfort">Save</string>

    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>

    <string name="title_activity_login"> Signup/Login to Hillforts</string>

    <string name="menu_showMap">Show Map</string>
</resources>